syntax = "proto3";

package user;

service UserService {
  rpc GetUser (UserRequest) returns (UserReply);
}

message UserRequest {
  int32 user_id = 1;
}

message UserReply {
  string name = 1;
  string origin = 2;
  string temperament = 3;
  int32 id = 4;
}